Disable Swap Flag/Cleared Columns

--- a/ynab-toolkit-settings.json
+++ b/ynab-toolkit-settings.json
@@ -409,7 +409,7 @@
   },
   {
     "key": "SwapClearedFlagged",
-    "value": true
+    "value": false
   },
   {
     "key": "TargetBalanceWarning",
